<resources>
    <string name="app_name">Photo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Log in</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_test">test</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_bienvenida2">Bienvenida2</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registro">Registro</string>
    <string name="emailEjemplo">juan@correo.com</string>
    <string name="contraseña">Contraseña</string>
    <string name="usuarioOContraseñaInvalido">Usuario, nombre o contraseña invalido</string>
    <string name="nombre">Nombre</string>
    <string name="errorRegistro">Error creando usuario en bd contacte administrador</string>
    <string name="logout">Log out</string>
    <string name="menu">Menu</string>
    <string name="perfil">Perfil</string>
    <string name="ir_ar_mapas">Ir a Mapas</string>
    <string name="mapa">Mapa</string>
    <string name="resumen">Resumen</string>
    <string name="agregarFoto">Agregar Foto</string>
    <string name="nombreEjemplo">Juan Rueda</string>
    <string name="ejemploarroba">\@juanrueda</string>
    <string name="arroba">Arroba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guardar">Guardar</string>
    <string name="editarFoto">Editar Foto</string>
</resources>