<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.v7.photo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="dev.v7.photo.ui.dashboard.DashboardFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dev.v7.photo.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="dev.v7.photo.ui.MapsFragment"
        android:label="@string/mapa"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_mapsFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/resumen_diario"
        android:name="dev.v7.photo.ui.Resumen"
        android:label="fragment_resumen"
        tools:layout="@layout/fragment_resumen" />
</navigation>